pkg/main/default/objects/AccountSettings__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>DocuSign Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>