pkg/main/default/objects/AccountSettings__c/fields/AccountName__c.field-meta.xml
<CustomField>
	<fullName>AccountName__c</fullName>
	<label>DocuSign Account Name</label>
	<length>100</length>
	<type>Text</type>
</CustomField>