pkg/main/default/objects/AccountSettings__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>DocuSign Account Number</description>
    <inlineHelpText>DocuSign Account Number</inlineHelpText>
    <label>DocuSign Account Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>