pkg/main/default/objects/AccountSettings__c/fields/AdministratorProfileId__c.field-meta.xml
<CustomField>
	<fullName>AdministratorProfileId__c</fullName>
	<description>DocuSign Administrator Profile ID</description>
	<inlineHelpText>DocuSign Administrator Profile ID</inlineHelpText>
	<label>DocuSign Administrator Profile ID</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>