pkg/main/default/objects/AccountSettings__c/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>DocuSign Base URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>