pkg/main/default/objects/AccountSettings__c/fields/CalloutTimeout__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeout__c</fullName>
    <defaultValue>60000</defaultValue>
    <label>Default Callout Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>