pkg/main/default/objects/AccountSettings__c/fields/CanUseSalesforceApi__c.field-meta.xml
<CustomField>
    <fullName>CanUseSalesforceApi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can use Salesforce API</label>
    <type>Checkbox</type>
</CustomField>