pkg/main/default/objects/AccountSettings__c/fields/ClientId__c.field-meta.xml
<CustomField>
	<fullName>ClientId__c</fullName>
	<label>Instance Client ID</label>
	<length>100</length>
	<type>Text</type>
</CustomField>