pkg/main/default/objects/AccountSettings__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
	<fullName>ClientSecret__c</fullName>
	<label>Instance Client Secret</label>
	<length>100</length>
	<type>Text</type>
</CustomField>