pkg/main/default/objects/AccountSettings__c/fields/ClmAdminUrl__c.field-meta.xml
<CustomField>
	<fullName>ClmAdminUrl__c</fullName>
	<label>CLM Admin URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>