pkg/main/default/objects/AccountSettings__c/fields/ClmLandingPageUrl__c.field-meta.xml
<CustomField>
	<fullName>ClmLandingPageUrl__c</fullName>
	<label>CLM Landing Page URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>