pkg/main/default/objects/AccountSettings__c/fields/CreateConnectConfiguration__c.field-meta.xml
<CustomField>
	<fullName>CreateConnectConfiguration__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Create Connect Configuration</label>
	<type>Checkbox</type>
</CustomField>