pkg/main/default/objects/AccountSettings__c/fields/DocumentResolvers__c.field-meta.xml
<CustomField>
    <fullName>DocumentResolvers__c</fullName>
    <label>Document Resolvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>