pkg/main/default/objects/AccountSettings__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>DocuSign Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>