pkg/main/default/objects/AccountSettings__c/fields/EncryptionKey__c.field-meta.xml
<CustomField>
	<fullName>EncryptionKey__c</fullName>
	<label>AES256 encryption key</label>
	<length>255</length>
	<type>Text</type>
</CustomField>