pkg/main/default/objects/AccountSettings__c/fields/EntityResolvers__c.field-meta.xml
<CustomField>
    <fullName>EntityResolvers__c</fullName>
    <label>Entity Resolvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>