pkg/main/default/objects/AccountSettings__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>DocuSign Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>