pkg/main/default/objects/AccountSettings__c/fields/ESignatureBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>ESignatureBaseUrl__c</fullName>
    <label>DocuSign eSignature API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>