pkg/main/default/objects/AccountSettings__c/fields/EveryoneGroupId__c.field-meta.xml
<CustomField>
	<fullName>EveryoneGroupId__c</fullName>
	<label>DocuSign Everyone Group ID</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>