pkg/main/default/objects/AccountSettings__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Account Feature Flags</description>
    <inlineHelpText>Account Feature Flags</inlineHelpText>
    <label>Account Feature Flags</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>