pkg/main/default/objects/AccountSettings__c/fields/FeaturesCheckFrequency__c.field-meta.xml
<CustomField>
    <fullName>FeaturesCheckFrequency__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Account Features Minutes Between Checks</description>
    <inlineHelpText>Account Features Minutes Between Checks</inlineHelpText>
    <label>Account Features Minutes Between Checks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>