pkg/main/default/objects/AccountSettings__c/fields/FeaturesLastChecked__c.field-meta.xml
<CustomField>
    <fullName>FeaturesLastChecked__c</fullName>
    <description>Account Features Last Checked</description>
    <inlineHelpText>Account Features Last Checked</inlineHelpText>
    <label>Account Features Last Checked</label>
    <type>DateTime</type>
</CustomField>