pkg/main/default/objects/AccountSettings__c/fields/InviteCallbackUrl__c.field-meta.xml
<CustomField>
	<fullName>InviteCallbackUrl__c</fullName>
	<label>User Invite Callback URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>