pkg/main/default/objects/AccountSettings__c/fields/InviteRedirectUrl__c.field-meta.xml
<CustomField>
	<fullName>InviteRedirectUrl__c</fullName>
	<label>User Invite Redirect URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>