pkg/main/default/objects/AccountSettings__c/fields/IsESignatureEnabled__c.field-meta.xml
<CustomField>
	<fullName>IsESignatureEnabled__c</fullName>
	<defaultValue>true</defaultValue>
	<label>Is eSignature Enabled</label>
	<type>Checkbox</type>
</CustomField>