pkg/main/default/objects/AccountSettings__c/fields/IsPlatformAuthorized__c.field-meta.xml
<CustomField>
	<fullName>IsPlatformAuthorized__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Is Platform Authorized</label>
	<type>Checkbox</type>
</CustomField>