pkg/main/default/objects/AccountSettings__c/fields/ManageUserFields__c.field-meta.xml
<CustomField>
    <fullName>ManageUserFields__c</fullName>
    <defaultValue>&quot;name,alias,username,email,DSProSFUsername__c,userroleid,managerid&quot;</defaultValue>
    <label>Manage User Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>