pkg/main/default/objects/AccountSettings__c/fields/OrganizationId__c.field-meta.xml
<CustomField>
	<fullName>OrganizationId__c</fullName>
	<label>Original install org ID</label>
	<length>18</length>
	<type>Text</type>
</CustomField>