pkg/main/default/objects/AccountSettings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>DocuSign API Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>