pkg/main/default/objects/AccountSettings__c/fields/PrivateKey0__c.field-meta.xml
<CustomField>
	<fullName>PrivateKey0__c</fullName>
	<label>RSA private key part 1</label>
	<length>255</length>
	<type>Text</type>
</CustomField>