pkg/main/default/objects/AccountSettings__c/fields/PrivateKey10__c.field-meta.xml
<CustomField>
	<fullName>PrivateKey10__c</fullName>
	<label>RSA private key part 11</label>
	<length>255</length>
	<type>Text</type>
</CustomField>