pkg/main/default/objects/AccountSettings__c/fields/PrivateKey11__c.field-meta.xml
<CustomField>
	<fullName>PrivateKey11__c</fullName>
	<label>RSA private key part 12</label>
	<length>255</length>
	<type>Text</type>
</CustomField>