pkg/main/default/objects/AccountSettings__c/fields/ProductsCheckFrequency__c.field-meta.xml
<CustomField>
    <fullName>ProductsCheckFrequency__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Account Products Minutes Between Checks</description>
    <inlineHelpText>Account Products Minutes Between Checks</inlineHelpText>
    <label>Account Products Minutes Between Checks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>