pkg/main/default/objects/AccountSettings__c/fields/ProductsLastChecked__c.field-meta.xml
<CustomField>
    <fullName>ProductsLastChecked__c</fullName>
    <description>Account Products Last Checked</description>
    <inlineHelpText>Account Products Last Checked</inlineHelpText>
    <label>Account Products Last Checked</label>
    <type>DateTime</type>
</CustomField>