pkg/main/default/objects/AccountSettings__c/fields/RecipientResolvers__c.field-meta.xml
<CustomField>
    <fullName>RecipientResolvers__c</fullName>
    <label>Recipient Resolvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>