pkg/main/default/objects/AccountSettings__c/fields/RecipientSearchBehavior__c.field-meta.xml
<CustomField>
    <fullName>RecipientSearchBehavior__c</fullName>
    <defaultValue>&quot;DiscreteMatchBeginning&quot;</defaultValue>
    <label>Recipient search behavior</label>
    <length>30</length>
    <type>Text</type>
</CustomField>