pkg/main/default/objects/AccountSettings__c/fields/ScmApiBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>ScmApiBaseUrl__c</fullName>
	<label>SpringCM API Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>