pkg/main/default/objects/AccountSettings__c/fields/ScmAuthBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>ScmAuthBaseUrl__c</fullName>
	<label>SpringCM Auth Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>