pkg/main/default/objects/AccountSettings__c/fields/ScmMergeBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>ScmMergeBaseUrl__c</fullName>
	<label>SpringCM Merge Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>