pkg/main/default/objects/AccountSettings__c/fields/ScmWebBaseUrl__c.field-meta.xml
<CustomField>
	<fullName>ScmWebBaseUrl__c</fullName>
	<label>SpringCM Web Base URL</label>
	<length>255</length>
	<type>Text</type>
</CustomField>