pkg/main/default/objects/AccountSettings__c/fields/SenderProfileId__c.field-meta.xml
<CustomField>
	<fullName>SenderProfileId__c</fullName>
	<description>DocuSign Sender Profile ID</description>
	<inlineHelpText>DocuSign Sender Profile ID</inlineHelpText>
	<label>DocuSign Sender Profile ID</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>