pkg/main/default/objects/AccountSettings__c/fields/SystemSenderId__c.field-meta.xml
<CustomField>
    <fullName>SystemSenderId__c</fullName>
    <label>DocuSign System Sender User ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>