pkg/main/default/objects/AccountSettings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>DocuSign Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>