pkg/main/default/objects/AccountSettings__c/fields/UseSendOnBehalfOf__c.field-meta.xml
<CustomField>
    <fullName>UseSendOnBehalfOf__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Send on Behalf of (SOBO)</label>
    <type>Checkbox</type>
</CustomField>