pkg/main/default/objects/AccountSettings__c/fields/UseSystemSender__c.field-meta.xml
<CustomField>
    <fullName>UseSystemSender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use System Sender</label>
    <type>Checkbox</type>
</CustomField>